fix flat style bug: `--control-group-spacing: -1px;`

--- a/src/styles/_flat-styles/components/_button-variables.scss
+++ b/src/styles/_flat-styles/components/_button-variables.scss
@@ -16,7 +16,7 @@
   --button-intent-gradient: unset; // linear-gradient(to bottom, rgba($white, 0.1), rgba($white, 0)) ;
   --dark-button-gradient: unset; // linear-gradient(to bottom, rgba($white, 0.05), rgba($white, 0)) ;
 
-  --control-group-spacing: 1px; // custom
+  --control-group-spacing: -1px; // custom
   --dark-control-group-spacing: -1px; // custom
 
 
